--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^30.2.0",
     "knex": "^3.1.0",
     "morgan": "^1.10.1",
+    "nodemon": "^3.1.11",
     "path": "^0.12.7",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
